--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="inex.html">Home</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
           <li><a href="news.html">News</a></li>
           <li><a href="support.html">Support</a></li>
           <li><a href="documentation.html">Documentation</a></li>
