--- a/contribute.html
+++ b/contribute.html
@@ -57,8 +57,8 @@
 
   <h4>Localization</h4>
   
-  <p>For localization, the Bareos Web-Frontend uses Gettext; you can find po files for each translation in the language 
-  directory <code>https://github.com/fbergkemper/barbossa/tree/master/module/Application/language</code>.</p>
+  <p>For localization, the Bareos WebUI uses Gettext; you can find po files for each translation in the language 
+  directory <code>https://github.com/bareos/bareos-webui/tree/master/module/Application/language</code>.</p>
   
   <p>You can translate them using the usual tools for handling Gettext translations, e.g. <a href="http://www.poedit.net/" target="_blank">Poedit</a>.</p>
   
