--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
   <div class="container">
   
   <div class="header">
-        <ul class="nav nav-pills pull-right">
+        <!--<ul class="nav nav-pills pull-right">
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="news.html">News</a></li>
           <li><a href="support.html">Support</a></li>
           <li><a href="documentation.html">Documentation</a></li>
           <li><a href="contribute.html">Contribute</a></li>
           <li><a href="download.html">Download</a></li>
-        </ul>
+        </ul>-->
         <h2 class="text-muted">Bareos WebUI</h2>
   </div>
 
@@ -63,12 +63,13 @@
   applications and services using <a href="http://www.php.net/" target="_blank">PHP 5.3+</a> and makes extensive use of the 
   Twitter <a href="http://getbootstrap.com/" target=_blank">Bootstrap</a> front-end framework.</p>
   
-  <p>The Bareos Web-Frontend is licensed under AGPL Version 3.</p>
+  <p>The Bareos WebUI is licensed under AGPL Version 3.</p>
   <p><a href="http://www.gnu.org/licenses/agpl-3.0.html" target="_blank"><img src="images/agplv3-155x51.png" /></a></p>
   
   </div>
   </div>
   
+  <!--
   <br />
   
   <h3>Features</h3>
@@ -137,7 +138,7 @@
   </div>
   </div>
 
-  <br />
+  <br /> -->
   
   <div class="footer">
         <p class="text-muted">Hosted on <a href="http://pages.github.com/">GitHub Pages</a></p>
