--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <p><a href="http://www.gnu.org/licenses/agpl-3.0.html" target="_blank"><img src="images/agplv3-155x51.png" /></a></p>
   
   <p>
-  For more information please visit the new <a href="https://www.bareos.org/en/bareos-webui.html"></a>bareos-webui project site</a>.
+  For more information please visit the new <a href="https://www.bareos.org/en/bareos-webui.html">bareos-webui project site</a>.
   </p>
   
   </div>
